--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "name": "startbootstrap-agency",
   "version": "4.0.0-beta",
   "description": "Agency is a one page HTML theme for Bootstrap.",
+  "scripts": {
+    "start": "app.js"
+  },
   "keywords": [
     "css",
     "sass",
@@ -27,6 +30,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
+    "express": "^4.15.4",
     "font-awesome": "4.7.0",
     "jquery": "^3.2.1",
     "jquery.easing": "^1.4.1",
